# LegoEsp32SunTracker

./: .clang-format  .gitignore  CMakeLists.txt  LegoEsp32SunTracker.fzz  LegoEsp32SunTracker.h  LegoEsp32SunTracker.ino  NetworkFunctions.ino  PubSubClient.cpp  PubSubClient.h  README.md  ServoFunctions.h  ServoFunctions.ino
